Sutter Health/src/objects/ShowMoreFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>ShowMoreFields</description>
    <fields>
        <fullName>GICSelectedFields__c</fullName>
        <description>GICSelectedFields</description>
        <label>GICSelectedFields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GICUnSeletedFields__c</fullName>
        <description>GICUnSeletedFields</description>
        <label>GICUnSeletedFields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SelectedFields__c</fullName>
        <description>SelectedFields</description>
        <label>SelectedFields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UnSeletedFields__c</fullName>
        <description>UnSeletedFields</description>
        <label>UnSeletedFields</label>
        <type>TextArea</type>
    </fields>
    <label>ShowMoreFields</label>
</CustomObject>